--- a/index.Rmd
+++ b/index.Rmd
@@ -12,7 +12,10 @@ knit        : slidify::knit2slides
 ---
 
 ## Read-And-Delete
-
+```{r,echo=FALSE}
+fit <- lm(y ~ x1 + x2 + x3)
+summary(fit)
+```
 1. Edit YAML front matter
 2. Write using R Markdown
 3. Use an empty line followed by three dashes to separate slides!
