--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title       : Project-ddp2014
 subtitle    : Project presentation of Unit conversion dynamic UI
 author      : Alok Juneja
 job         : Presentation made on `r date()`
-framework   : io2012        # {io2012, html5slides, shower, dzslides, ...}
+framework   : shower        # {io2012, html5slides, shower, dzslides, ...}
 highlighter : highlight.js  # {highlight.js, prettify, highlight}
 hitheme     : tomorrow      # 
 widgets     : [mathjax]            # {mathjax, quiz, bootstrap}
@@ -12,10 +12,7 @@ knit        : slidify::knit2slides
 ---
 
 ## Read-And-Delete
-```{r,echo=FALSE}
-fit <- lm(y ~ x1 + x2 + x3)
-summary(fit)
-```
+
 1. Edit YAML front matter
 2. Write using R Markdown
 3. Use an empty line followed by three dashes to separate slides!
