--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title       : Project-ddp2014
 subtitle    : Project presentation of Unit conversion dynamic UI
 author      : Alok Juneja
 job         : Presentation made on `r date()`
-framework   : shower        # {io2012, html5slides, shower, dzslides, ...}
+framework   : io2012        # {io2012, html5slides, shower, dzslides, ...}
 highlighter : highlight.js  # {highlight.js, prettify, highlight}
 hitheme     : tomorrow      # 
 widgets     : [mathjax]            # {mathjax, quiz, bootstrap}
@@ -13,8 +13,14 @@ knit        : slidify::knit2slides
 
 ## Read-And-Delete
 
+*** {name: left}
+
 1. Edit YAML front matter
 2. Write using R Markdown
+
+*** {name: rigth}
+
+
 3. Use an empty line followed by three dashes to separate slides!
 
 --- .class #id 
