--- a/index.Rmd
+++ b/index.Rmd
@@ -13,20 +13,18 @@ knit        : slidify::knit2slides
 
 ## Why Unit conversion?
 
-In our daily life we have to quantify the things that we use/consume.
-
-A system of measurement is a set of units of measurement which can be used to specify anything which can be measured.
+A system of measurement is a set of units of measurement which we use in our daily life to quantify the things that we use/consume.
 
 System of measurement
 
-Metric system
-Imperial and US customary units
+1. Metric system:
 
+    evolved since the adoption of the first well-defined system in France in 1795
 
-The metric system is an internationally agreed decimal system of measurement that was originally based on the mètre des Archives and the kilogramme des Archives introduced by France in 1799.
+    in the early metric system there were two fundamental or base units, the metre for length and the gram for mass.
 
-In the present global In our daily life where itemthe field of science, the metric system is used in performing measurements. The metric system is actually easier to use than the English system, as you will see shortly. The metric system uses prefixes to indicate the magnitude of a measured quantity. The prefix itself gives the conversion factor. You should memorize some of the common prefixes, as you will be using them on a regular basis.
-
+2. Imperial and US customary units:
+    
 --- .class #id 
 
 ## Different systems
