--- a/index.Rmd
+++ b/index.Rmd
@@ -15,19 +15,19 @@ knit        : slidify::knit2slides
 
 A system of measurement is a set of units of measurement which we use in our daily life to quantify the things that we use/consume.
 
-System of measurement
+There are several systems of measurements used in different countries and in different fields of science depending on the requirements. To name few..
 
-1. Metric system:
-
-    evolved since the adoption of the first well-defined system in France in 1795
-
-    in the early metric system there were two fundamental or base units, the metre for length and the gram for mass.
-
-2. Imperial and US customary units:
+1. Metric system
+2. Imperial and US customary units
+3. Natural units
+4. Non-standard units
+5. Units of currency
 
 --- .class #id 
 
-## Temperature / Length Conversions
+## Temperature / Length / Volume Conversions
+
+As a demonstration, a simple unit converter is implemented in shiny. Following conversions have been used.
 
 Temperature conversion
 
@@ -35,119 +35,48 @@ $^{\circ}\mathrm{C} = (^{\circ}\mathrm{F} - 32) * 5/9$
 
 $^{\circ}\mathrm{F} = (^{\circ}\mathrm{C} * 9/5) + 32$ 
 
---- .class #id 
+$K = ^{\circ}\mathrm{C} + 273.15$ 
 
-## R code and shiny (ui.R)
+Length conversion
 
-```{r,}
-library(shiny)
+$Mile = Km * 0.62137$
 
-shinyUI(fluidPage(
-  headerPanel("Unit converter"),
-  fluidRow(column(10,
-    fluidRow(column(4,
-      radioButtons("id1", "Choose option",
-                   c("Temperature" = "Temperature",
-                     "Length" = "Length")),
+$Yard = Km * 1093.6$
 
-      # This outputs the dynamic UI component based on the option above
-	    uiOutput("ui1"),
-      textInput('val1',"Enter the value"),
-	    uiOutput("ui2")
+Volume conversion
 
-    ),
-    column(6,
-    mainPanel(
-        verbatimTextOutput("typ"),
-        verbatimTextOutput("ans")
-  )))
-))))
+$Ml = US oz * 29.5735$
 
-```
+--- .class #id font-size: 8px
 
---- .class #id
-
-## R code and shiny (server.R)
+## Examples used in daily life
 
 ```{r}
-library(shiny)
+#Q1. What is the human body temperature (37 degree celsius) in degree Fahrenheit?
+bd_cel=37
+(bd_cel*9/5)+32
 
-converter <- function(id,from,to,val) {
-  switch(id,
-  	"Temperature"={
-			switch(from,
-				"Celsius"={
-					switch(to,
-						"Celsius" = round(val,digits=6),
-						"Fahrenheit" = round((val * 9/5) + 32,digits=6),
-						"Kelvin" = round(val + 273.15,digits=6))
-				},
-				"Fahrenheit"={
-					switch(to,
-						"Celsius" = round((val - 32 ) * 5/9,digits=6),
-						"Fahrenheit" = round(val,digits=6),
-						"Kelvin" = round(((val - 32 ) * 5/9) + 273.15,digits=6))
-				},
-				"Kelvin"={
-					switch(to,
-					"Celsius" = round(val - 273.15,digits=6),
-					"Fahrenheit" = round(((val - 273.15) * 9/5) + 32,digits=6),
-					"Kelvin" = round(val,digits=6))
-				}
-			)
-		},
-		"Length" = {
-			switch(from,
-				"Kilometers" = {
-					switch(to,
-						"Kilometers" = round(val,digits=6),
-						"Miles" = round(val * 0.62137,digits=6),
-						"Yards" = round(val * 1093.6,digits=6))
-				},
-				"Miles" = {
-					switch(to,
-						"Kilometers" = round(val * 1.609344,digits=6),
-						"Miles" = round(val,digits=6),
-						"Yards" = round(val * 1760,digits=6))
-				},
-				"Yards" = {
-					switch(to,
-						"Kilometers" = round(val * 0.00091,digits=6),
-						"Miles" = round(val * 0.00056818,digits=6),
-						"Yards" = round(val,digits=6))
-				}
-			)
-		}
-	)
-} 
+#Q2. How many kilometers is equivalent to 1 mile in US?
+dis_mile=1
+dis_mile*1609.344/1000
 
-shinyServer(
-  function(input, output) {
-	# Depending on input$id1, generate a different conversion units
-	# UI component and send it to the client.
-  
-	output$ui1 <- renderUI({
-	  if (is.null(input$id1))
-	    return()
-    
- 		switch(input$id1,
-  		"Temperature" = selectInput("from", "From", c("Celsius", "Fahrenheit", "Kelvin")),
-  		"Length" = selectInput("from", "From", c("Kilometers", "Miles","Yards")))
-  		})
-
-	output$ui2 <- renderUI({
-	  if (is.null(input$id1))
-	    return()
-	  
-    switch(input$id1,
-  		"Temperature" = selectInput("to", "To", c("Celsius", "Fahrenheit", "Kelvin")),
-  		"Length" = selectInput("to", "To", c("Kilometers", "Miles","Yards")))
-  		})
-
-  
-  output$typ <- renderText({paste("Convert", input$id1 )})	
-  output$ans <- renderText({paste(input$val1, input$from, "=",converter(toString(input$id1),toString(input$from),toString(input$to),as.double(input$val1)),input$to)})
-  }
-)
-
+#Q3. How much ml in 12.004 US oz coke can in US? 
+can_oz=12.004
+can_oz * 29.5735
 ```
+
+--- .class #id 
+
+## Application and shiny source code
+
+Shiny source code:
+
+https://gist.github.com/junejaalok/9dfe302679c032a80c47
+
+Application on shinapps.io
+
+https://junejaalok.shinyapps.io/project-ddp2014/
+
+In case 
+
+https://junejaalok.shinyapps.io/project-ddp2014/?showcase=0
