--- a/index.Rmd
+++ b/index.Rmd
@@ -50,7 +50,7 @@ $mL = US oz * 29.5735$
 --- .codefont #id
 
 ## Examples used in daily life
-
+We do conversions from one unit to another in our daily life. Few examples..
 ```{r}
 #Q1. What is the human body temperature (37 degree celsius) in degree Fahrenheit?
 bd_cel=37
